@@ -1,4 +1,4 @@
-VERSION=2.20.01
+VERSION=2.20.02
 
-YEARS=2005-2011
+YEARS=2005-2012
 
