@@ -1,3 +1,9 @@
+bobcat (2.20.02)
+
+  * Using rang-based for loops where appropriate; minor cosmetic code changes
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 04 Jan 2012 13:20:29 +0100
+
 bobcat (2.20.01)
 
   * Repaired bug in ReadLineBuf: object was incompletely initialized
